tests/examples/bad/class_member_field_not_exists.lat
int main() {
    A var;
    var.b;
    return 1;
}

class A {
    int a;
}

